--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -4,10 +4,26 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        version: [3.7, 3.8, 3.9]
+    runs-on: ${{ matrix.os }}
     steps:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.7
+        py-version: ${{ matrix.version }}
+
+# jobs:
+#   example_matrix:
+#     strategy:
+#       matrix:
+#         os: [ubuntu-22.04, ubuntu-20.04]
+#         version: [10, 12, 14]
+#     runs-on: ${{ matrix.os }}
+#     steps:
+#       - uses: actions/setup-node@v4
+#         with:
+#           node-version: ${{ matrix.version }}
         
