--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -7,13 +7,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        version: [3.7, 3.8, 3.9]
+        py-version: [3.7, 3.8, 3.9]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        py-version: ${{ matrix.version }}
+        python-version: ${{ matrix.version }}
 
 # jobs:
 #   example_matrix:
