--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -8,12 +8,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         py-version: [3.7, 3.8, 3.9]
-    runs-on: ${{ matrix.os }}
+    runs-on: '${{ matrix.os }}'
     steps:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.version }}
+        python-version: '${{ matrix.py-version }}'
 
 # jobs:
 #   example_matrix:
